--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,13 @@
 Content/** filter=lfs diff=lfs merge=lfs -text
+Content/ filter=lfs diff=lfs merge=lfs -text
+Content/Collections filter=lfs diff=lfs merge=lfs -text
+Content/FPWeapon filter=lfs diff=lfs merge=lfs -text
+Content/FirstPerson filter=lfs diff=lfs merge=lfs -text
+Content/Mannequin filter=lfs diff=lfs merge=lfs -text
+Content/ThirdPerson filter=lfs diff=lfs merge=lfs -text
+Content/Developers filter=lfs diff=lfs merge=lfs -text
+Content/EnemyAI filter=lfs diff=lfs merge=lfs -text
+Content/FirstPersonBP filter=lfs diff=lfs merge=lfs -text
+Content/Geometry filter=lfs diff=lfs merge=lfs -text
+Content/StarterContent filter=lfs diff=lfs merge=lfs -text
+Content/ThirdPersonBP filter=lfs diff=lfs merge=lfs -text
