--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,8 @@ Content/FirstPersonBP filter=lfs diff=lfs merge=lfs -text
 Content/Geometry filter=lfs diff=lfs merge=lfs -text
 Content/StarterContent filter=lfs diff=lfs merge=lfs -text
 Content/ThirdPersonBP filter=lfs diff=lfs merge=lfs -text
+Config/DefaultEditorPerProjectUserSettings.ini filter=lfs diff=lfs merge=lfs -text
+Config/DefaultEngine.ini filter=lfs diff=lfs merge=lfs -text
+Config/DefaultGame.ini filter=lfs diff=lfs merge=lfs -text
+Config/DefaultInput.ini filter=lfs diff=lfs merge=lfs -text
+Config/DefaultEditor.ini filter=lfs diff=lfs merge=lfs -text
